z-index fix

--- a/src/components/ComboBox.less
+++ b/src/components/ComboBox.less
@@ -59,7 +59,7 @@
         @dropdownMaxHeight: 500px;
         @tabsHeight: 30px;
         position: absolute;
-        z-index: 999;
+        z-index: 1;
         top: 100%;
         width: 100%;
         max-height: @dropdownMaxHeight;
