--- a/src/components/SpecLinesBuilder.less
+++ b/src/components/SpecLinesBuilder.less
@@ -4,7 +4,7 @@
             position: fixed;
             width: 100%;
             max-width: 1115px;
-            z-index: 1;
+            z-index: 2;
             top: 0;
         }
 
